[package]
name = "oref-red-alert"
version = "1.0.0"
description = "Israel Home Front Command API wrapper"
readme = "README.md"
repository = "https://github.com/ronthecookie/oref-red-alert"
license = "MIT"
authors = ["Ron B <me@ronthecookie.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4"
